# MySynth

./: .classpath  .gitignore  .project  AndroidManifest.xml  README.md  build.gradle  import-summary.txt  project.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  MySynthAAudio.c  MySynthOpenSL.c
gradle/wrapper/: gradle-wrapper.properties
jni_aaudio/jni/: Android.mk  Application.mk  MySynthAAudio.c
jni_opensl/jni/: Android.mk  Application.mk  MySynthOpenSL.c
res/drawable/: btn_check.xml  btn_default.xml  btn_dropdown.xml  btn_mini.xml  btn_radio.xml  timepicker_left_btn.xml  timepicker_right_btn.xml
res/drawable-nodpi/: joy_button.xml  main_button.xml  theme_button.xml
res/layout/: ambilwarna_dialog.xml  ambilwarna_pref_widget.xml  fileselector_dialog.xml  fileselector_item.xml  gallant_splash.xml  input_dialog.xml  item_row.xml  message_dialog.xml  number_picker_horizontal.xml  number_picker_vertical.xml  properties_dialog.xml  screenkeyboard.xml  select_item_dialog.xml  select_item_row.xml  settings.xml  sound_list_item.xml  sound_picker.xml  spinner_item.xml
res/layout-large/: select_item_dialog.xml
res/layout-small/: select_item_dialog.xml
res/layout-xlarge/: select_item_dialog.xml
res/values/: attrs.xml  colors.xml  dimen.xml  strings.xml  style.xml
res/values-land/: dimen.xml
res/values-xlarge-land/: dimen.xml
res/xml/: device_filter.xml
src/com/gallantrealm/android/: AssetLoader.java  BalanceSlider.java  ContentUriUtil.java  (+21 more)
src/yuku/ambilwarna/: AmbilWarnaDialog.java  AmbilWarnaKotak.java
(+208 files in other folders)
